--- a/kubernetes-kustomize/base/service.yaml
+++ b/kubernetes-kustomize/base/service.yaml
@@ -1,17 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  environment: '${ parameters.environment }'
+  name: label-demo
   labels:
-    app: service
-  name: service
+    environment: '${ parameters.environment }'
+    app: nginx
 spec:
   ports:
-  - name: 80-80
-    port: 80
-    protocol: TCP
-    targetPort: 80
-    nodePort: 30080
-  selector:
-    id: app
-  type: NodePort
+    containers:
+    - name: nginx
+      image: nginx:1.7.9
+      ports:
+      - containerPort: 80
