--- a/kubernetes-kustomize/overlays/prod/service.yaml
+++ b/kubernetes-kustomize/overlays/prod/service.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Service
 metadata:
   name: simpleapp
+  labels:
+    environment: prod
 spec:
   selector:
     app: simpleapp
