--- a/kubernetes-kustomize/overlays/uat/service.yaml
+++ b/kubernetes-kustomize/overlays/uat/service.yaml
@@ -1,8 +1,9 @@
 apiVersion: v1
 kind: Service
-metadata:
-  environment: uat  
+metadata: 
   name: simpleapp
+  labels:
+    environment: uat 
 spec:
   selector:
     app: simpleapp
